tests/vertical-slice/reject/real_index_type_error_preserved.hew
fn main() {
    let xs = 5;
    let _z = xs[0];
}
